--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "football-data",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "@fernando0rdonez",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -16,9 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
