--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ services:
   db:
     image: postgres
     ports:
-      - '5432:5432'
+      - ${TYPEORM_PORT}:5432
     environment:
-      POSTGRES_USER: secret_user
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: footballdata
+      POSTGRES_USER: ${TYPEORM_USERNAME}
+      POSTGRES_PASSWORD: ${TYPEORM_PASSWORD}
+      POSTGRES_DB: ${TYPEORM_DATABASE}
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    env_file:
+      - ./.env
