--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^12.0.7",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
